--- a/src/tex/chapter_2.tex
+++ b/src/tex/chapter_2.tex
@@ -1,49 +1,45 @@
 \chapter{Environnement}
-    \section{L'université des Antilles}
-    L’université des Antilles est une université pluridisciplinaire implantée sur deux régions, Guadeloupe et Martinique née de la scission de l’université des Antilles et de la Guyane (UAG) en 2014, en université de Guyane, d’une part et en université des Antilles, d’autre part.
-
-    \vspace{0.5cm}
-
-    Elle comprend l'une des 204 écoles d'ingénieurs françaises accréditées au 1er septembre 2020 à délivrer un diplôme d'ingénieur.
-
-    \section{L'UFR SEN}
-    L’Unité de Formation et de Recherche (UFR) en Sciences Exactes et Naturelles (SEN), communément appelée UFR SEN, compte près de 1 800 étudiants, 110 enseignants et enseignants chercheurs, 32 personnels BIATSS, et a la particularité d’être la composante de l’Université des Antilles qui porte le plus de diplômes de formation (15) et de structures de recherche (9 sur les 25 que compte toute l’université). 
-    Ses domaines de recherche et de formation couvrent les six pôles thématiques de l’Université des Antilles : Risques et Énergies, Numérique, Mer et Océan, Biodiversité en milieu tropical insulaire, Santé insulaire en environnement tropical, Dynamique des sociétés et territoires Caraïbes.
-
-    \vspace{0.5cm}
-
-    Les équipes de recherche portent à elles seules près de 70\% de l’ensemble des projets de recherche réalisé à l’Université des Antilles.
-    Des impacts environnementaux des sargasses, à l’étude de la durabilité des matériaux, en passant par les risques naturels majeurs et les transitions énergétiques, climatiques et écologiques, la Faculté des Sciences est porteuse de projets innovants. 
-
-    % \vspace{1cm}
-
-    \section{L'Equipe de la Biologie de la Mangrove}
-    L'équipe \textbf{Biologie de la Mangrove} fait partie intégrante de l'UMR 7205 MNHN CNRS-Sorbonne Université-UA <<Institut de Systématique, Evolution, Biodiversité>> dirigée par \underline{Philippe Grandcolas}.
-
-    \vspace{0.5cm}
-
-    \begin{flushleft}
-        Elle représente l'une des 19 équipes constituant actuellement cette UMR qui est répartie sur 2 sites (Paris et Guadeloupe). L'équipe \textbf{Biologie de la Mangrove} est composée exclusivement de personnels de l'Université des Antilles et est localisée en Guadeloupe sur le campus de Fouillole.
+    % Presentation de la structure de l'environnement 2.1 2.2 2.3
+    \section{Présentation de la structure}
+        \subsection{L'université des Antilles}
+        L’université des Antilles est une université pluridisciplinaire implantée sur deux régions, Guadeloupe et Martinique née de la scission de l’université des Antilles et de la Guyane (UAG) en 2014, en université de Guyane, d’une part et en université des Antilles, d’autre part.
 
         \vspace{0.5cm}
+
+        Elle comprend l'une des 204 écoles d'ingénieurs françaises accréditées au 1er septembre 2020 à délivrer un diplôme d'ingénieur.
+
+        \subsection{L'UFR SEN}
+        L’Unité de Formation et de Recherche (UFR) en Sciences Exactes et Naturelles (SEN), communément appelée UFR SEN, compte près de 1 800 étudiants, 110 enseignants et enseignants chercheurs, 32 personnels BIATSS, et a la particularité d’être la composante de l’Université des Antilles qui porte le plus de diplômes de formation (15) et de structures de recherche (9 sur les 25 que compte toute l’université). 
+        Ses domaines de recherche et de formation couvrent les six pôles thématiques de l’Université des Antilles : Risques et Énergies, Numérique, Mer et Océan, Biodiversité en milieu tropical insulaire, Santé insulaire en environnement tropical, Dynamique des sociétés et territoires Caraïbes.
+
+        \vspace{0.5cm}
+
+        Les équipes de recherche portent à elles seules près de 70\% de l’ensemble des projets de recherche réalisé à l’Université des Antilles.
+        Des impacts environnementaux des sargasses, à l’étude de la durabilité des matériaux, en passant par les risques naturels majeurs et les transitions énergétiques, climatiques et écologiques, la Faculté des Sciences est porteuse de projets innovants. 
+
+        % \vspace{1cm}
+
+        \subsection{L'Equipe de la Biologie de la Mangrove}
+        L'équipe \textbf{Biologie de la Mangrove} fait partie intégrante de l'UMR 7205 MNHN CNRS-Sorbonne Université-UA <<Institut de Systématique, Evolution, Biodiversité>> dirigée par \underline{Philippe Grandcolas}.
+
+        \vspace{0.5cm}
+
+        \begin{flushleft}
+            Elle représente l'une des 19 équipes constituant actuellement cette UMR qui est répartie sur 2 sites (Paris et Guadeloupe). L'équipe \textbf{Biologie de la Mangrove} est composée exclusivement de personnels de l'Université des Antilles et est localisée en Guadeloupe sur le campus de Fouillole.
+
+            \vspace{0.5cm}
+            
+            L'équipe de la Biologie de la Mangrove intégré l'UMR 7205 ISYEB en janvier 2019 en proposant d'étudier la biologie et les adaptations évolutives (par le biais de la symbiose essentiellement) de modèles littoraux côtiers tropicaux évoluant au sein d'écosystèmes extrêmes (forte teneurs en composés soufrés réduits comme la mangrove et les herbiers à phanérogames marines) faciles d'accès.
         
-        L'équipe de la Biologie de la Mangrove intégré l'UMR 7205 ISYEB en janvier 2019 en proposant d'étudier la biologie et les adaptations évolutives (par le biais de la symbiose essentiellement) de modèles littoraux côtiers tropicaux évoluant au sein d'écosystèmes extrêmes (forte teneurs en composés soufrés réduits comme la mangrove et les herbiers à phanérogames marines) faciles d'accès.
-    
-        \vspace{0.5cm}
-    
-        Mon tuteur en entreprise durant le stage est Monsieur \underline{Olivier GROS} responsable de l'équipe Biologie de la Mangrove et Professeur des Universités.
-        Les étapes de développement de l'application est validée par Monsieur \underline{Manuel CLERGUE} également Professeur et chercheur à l'Université des Antilles.
-        Les membres de l'équipe projet Monsieur \underline{Matheiu BONNEAU} intervenant Mathématique et Madame \underline{SUZANNE} doctorante et la stagiaire en Biologie qui aura la gestion des expériences.
+            \vspace{0.5cm}
+        
+            Mon tuteur en entreprise durant le stage est Monsieur \underline{Olivier GROS} responsable de l'équipe Biologie de la Mangrove et Professeur des Universités.
+            Les étapes de développement de l'application est validée par Monsieur \underline{Manuel CLERGUE} également Professeur et chercheur à l'Université des Antilles.
+            Les membres de l'équipe projet Monsieur \underline{Matheiu BONNEAU} intervenant Mathématique et Madame \underline{SUZANNE} doctorante et la stagiaire en Biologie qui aura la gestion des expériences.
 
-    \end{flushleft}
+        \end{flushleft}
 
-
-    \section{Ressources fournies}
-    Plusieurs ressources m'ont été fournies dans le cadre de mon stage.
-    Dans un premier temps, j'ai reçu le matériel permettant l'acquisition vidéo qui sera abordé dans la section 4.2.
-    Une connexion filaire au réseau de l'Université des Antilles a été fournie pour me permettant d'installer des mise à jour de logiciels.
-
-    \section{Organisation du stage}
+    \section{Organisation du stage} 
     Tout au long du stage, des réunions régulières on été organisées avec mon encadrant Monsieur \underline{Manuel CLERGUE} afin de faire le point sur l'avancement du projet.
 
     \begin{flushleft}
@@ -58,7 +54,12 @@
         \vspace{0.5cm}      
     \end{flushleft}
 
-    \section{Contraintes particulière}
+    \subsection{Ressources fournies}
+    Plusieurs ressources m'ont été fournies dans le cadre de mon stage.
+    Dans un premier temps, j'ai reçu le matériel permettant l'acquisition vidéo qui sera abordé dans la section 4.2.
+    Une connexion filaire au réseau de l'Université des Antilles a été fournie pour me permettant d'installer des mise à jour de logiciels.
+
+    \subsection{Contraintes particulière}
     Durant ce stage j'ai eu deux contraintes particulières :
     \begin{itemize}
         \item  Premièrement, le matériel ayant été commandé avant le début de mon stage et des différents aspects techniques.
