--- a/rapport_stage.tex
+++ b/rapport_stage.tex
@@ -44,7 +44,7 @@
 \include{./src/tex/thanks.tex}
 % Remerciments             ===============================
 
-\dominitoc
+% \dominitoc
 \tableofcontents
 
 
