--- a/src/tex/chapter_4.tex
+++ b/src/tex/chapter_4.tex
@@ -427,9 +427,16 @@ Dans un premier temps, il faudra installer le système Raspbian. Une fois l’in
 
         
 
-        \subsection{Travaux pratiques}
-        J'ai eu l'occasion de partir à la recherche de Gérridés dans la Mangrove de la Guadeloupe et d'en attraper a l'épuisette (voir Figure 3.2).
+        \subsection{Travail en laboratoire}
+        Tout le système que nous avons crée jusqu'à maintenant est destiné à être utilisé dans un laboratoire.
 
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[scale=0.09]{setup.jpeg} 
+            \caption{Le dispositif installé dans le laboratoire}
+        \end{figure}
+
+        J'ai eu l'occasion de partir à la recherche de Gérridés dans la Mangrove de la Guadeloupe et d'en attraper a l'épuisette (voir Figure 3.2).
         \begin{figure}[ht]
             \centering
             \includegraphics[scale=0.04]{mangrove.jpeg}
