--- a/src/tex/chapter_5.tex
+++ b/src/tex/chapter_5.tex
@@ -1,2 +1,7 @@
 \chapter{Conclusion}
-\minitoc      
+    % (il faut dire à un moment a quoi ca sert tout ça :
+    % automatiser la detection des gerridés par traitement des video -> en temps réel !!)
+    \section{Interface labo / traitement informatique}
+    \section{Ressentis par rapport au stage}
+    \section{Perspectives futures}
+    
