--- a/src/tex/chapter_5.tex
+++ b/src/tex/chapter_5.tex
@@ -1,7 +1,51 @@
 \chapter{Conclusion}
     % (il faut dire à un moment a quoi ca sert tout ça :
     % automatiser la detection des gerridés par traitement des video -> en temps réel !!)
+    Ce stage a permis le début du développement d'un système de reconnaissance de gerridés afin de faciliter le travail des biologistes durant leur expérimentations.
+    
     \section{Interface labo / traitement informatique}
+    
     \section{Ressentis par rapport au stage}
+    Le travail scientifique que je réalise durant mes études mon permis de comprendre les différentes documentations allant du montage du Raspberry Pi à la programmation et l'utilisation de l'API PiCamera afin de concevoir l'application. 
+
+    % \begin{flushleft}
+        % Nos divers formation en gestion de projet, mon permis de réussir le travail demandé sous contrainte de temps.
+
+        % \vspace{0.2cm}
+
+        % Notre apprentisage universitaire en informatique ma permis de m'adapter rapidement ainsi que de travailler de manière efficace.
+
+        % \vspace{0.2cm}
+
+        % Bien que la formation universitaire permet de bien s'adapter a la vie professionnelle, ce stage en immersion ma permit de dévoiler d'autres facette de mon futur métier. 
+    % \end{flushleft}
+
+
     \section{Perspectives futures}
+    Durant ce stage, nous avons remplacer un dispositif permettant la capture vidéo de qualité en terme de vidéo grace à la GoPro, mais n'était pas optimisé pour le travail en laboratoire.
+
+    \begin{flushleft}
+        De ce fait nous avons conçu un dispositif permettant la capture vidéo avec divers fonctionnalités grace à l'application comme l'arrêt automatique des vidéos, prendre le nombre de photos souhaité en rafale, avec la possibilité d'avoir un rendu de la vidéo en temps réel dans les mains via à l'écran tactile.
+
+        \vspace{0.2cm}
+
+        Bien que nous perdons en qualité d'enregistrement vidéo et photo, nous avons réussit à réaliser un système optimal pour un moindre coût.
+
+        \vspace{0.2cm}
+    
+        Mais le système n'est pas fixe, c'est à dire que nous pouvons changer le module camèra par un modèle plus performant afin d'avoir un meilleur rendu vidéo. 
+
+        \vspace{0.2cm}
+
+        Concernant l'application, nous pouvons améliorer la fait que l'application se bloque durant le mode rafale ou le mode d'enregistrement automatique en faisant du multi-processus.
+        Cela nous permettrait de réaliser une tâche tout en faisant une autre.
+
+        \vspace{0.2cm}
+
+        Il serait également intéressant d'automatiser l'anotation d'image, en effet annoter une grande quantité d'image est une tache très longue.
+
+        Avec la prise de vue en temps réele, nous pourions annoter anoter de manière automatique les images et en grande quantité sans que cela soit une tâche fastidieuse.
+    \end{flushleft}
+
+
     
