--- a/rapport_stage.tex
+++ b/rapport_stage.tex
@@ -44,6 +44,10 @@
 \include{./src/tex/thanks.tex}
 % Remerciments             ===============================
 
+% Résumé             ===============================
+\include{./src/tex/abstract.tex}
+% Résumé             ===============================
+
 % \dominitoc
 \tableofcontents
 
