--- a/src/tex/chapter_1.tex
+++ b/src/tex/chapter_1.tex
@@ -3,5 +3,7 @@
     Il me permet de mettre en pratique mes acquis en informatique et de me familiariser avec la vie professionnelle.
 
     \vspace{0.5cm}
-
-    Dans ce rapport de stage, je vais décrire le contexte de l'entreprise, la problématique, les objectifs, les étapes de réalisation du logiciel de capture vidéo.
+    Dans ce rapport, je présente mon environnement de travail, ainsi que la mission principal que j'ai été amené à accomplir au sein du laboratoire ISYEB à savoir la conception d'un dispositif de prise de vue ainsi que la réalisation d'un applciation permettant de lancer des prises de vue.
+    En effet, le laboratoire ISYEB possède déjà un dispositif permettant les prises de vue, mais il s'agit d'un dispositif provisoire que les biologistes on décidé de remplacer.
+    
+    % Dans ce rapport, je vais décrire le contexte de l'entreprise, la problématique, les objectifs, les étapes de réalisation du logiciel de capture vidéo.    
