--- a/src/tex/thanks.tex
+++ b/src/tex/thanks.tex
@@ -1,13 +1,14 @@
-\begin{center}
-    \textbf{\large{Remerciments}} \\[2cm]
+\vspace*{\fill}
+    \begin{center}
+        \textbf{\large{Remerciments}} \\[2cm]
 
-    Je tiens à remercier tout ceux qui ont contribué à la réalisation de ce rapport de stage. \\[0.5cm]
+        Je tiens à remercier tout ceux qui ont contribué à la réalisation de ce rapport de stage. \\[0.5cm]
 
-    Tout d'abod, je tiens exprimé ma gratitude à Monsieur Manuel CLERGUE de m'avoir accepté et accompagné durant mon stage. \\[0.5cm]
+        Tout d'abod, je tiens exprimé ma gratitude à Monsieur Manuel CLERGUE de m'avoir accepté et accompagné durant mon stage. \\[0.5cm]
 
-    J'adresse mes remerciments à Monsieur Olivier GROS pour l'accueil chaleureuse au sein de l'équipe et de m'avoir fait partager ses connaissances et son expériences dans le domaine de la biologie. \\[0.5cm]
+        J'adresse mes remerciments à Monsieur Olivier GROS pour l'accueil chaleureuse au sein de l'équipe et de m'avoir fait partager ses connaissances et son expériences dans le domaine de la biologie. \\[0.5cm]
 
-    Merci à tous les membres de l'équipe de Biologie de la Mangrovee pour leur aide et leur soutien. \\[0.5cm]
+        Merci à tous les membres de l'équipe de Biologie de la Mangrovee pour leur aide et leur soutien. \\[0.5cm]
 
-    
-\end{center}
+    \end{center}
+\vspace*{\fill}
