--- a/src/tex/chapter_5.tex
+++ b/src/tex/chapter_5.tex
@@ -3,8 +3,9 @@
     % automatiser la detection des gerridés par traitement des video -> en temps réel !!)
     Ce stage a permis le début du développement d'un système de reconnaissance de gerridés afin de faciliter le travail des biologistes durant leur expérimentations.
     
-    \section{Interface labo / traitement informatique}
-    
+    % Finaliser section 1
+    % \section{Interface labo / traitement informatique}
+
     \section{Ressentis par rapport au stage}
     Le travail scientifique que je réalise durant mes études mon permis de comprendre les différentes documentations allant du montage du Raspberry Pi à la programmation et l'utilisation de l'API PiCamera afin de concevoir l'application. 
 
