Add word ref to def & quick update

--- a/src/tex/bibliography.tex
+++ b/src/tex/bibliography.tex
@@ -35,6 +35,7 @@
     \textbf{Resources Informative}
     \begin{itemize}
         \item \footnotesize{\url{https://wethegeek.com/programming-languages-for-raspberry-pi/}}
+        \item \footnotesize{\url{https://fr.wikipedia.org/wiki/Wikipédia:Accueil_principal}}
     \end{itemize}
     
 \end{thebibliography}
