--- a/src/tex/chapter_4.tex
+++ b/src/tex/chapter_4.tex
@@ -17,7 +17,7 @@ Dans un premier temps, il faudra installer le système Raspbian. Une fois l’in
 
     \section{Réception du matériel}
         \subsection{Raspberry Pi}
-        Le \textit{Raspberry Pi} est un ordinateur portable de petite taille, doté d'un processeur ARM et d'un système d'exploitation Linux.
+        Le \textit{Raspberry Pi} est un ordinateur portable de petite taille, doté d'un processeur \underline{$ ARM^{\ref{def:ARM}}$}  et d'un système d'exploitation Linux.
 
         % Intérêt :
         % - cout, manipulation
@@ -56,7 +56,7 @@ Dans un premier temps, il faudra installer le système Raspbian. Une fois l’in
                     \item \textbf{Inconvénients :}
                     En vu de sa petite taille, il est très fragile mais égalemnt très peu performant.
                     Sa configuration n'est pas toujours simple à réaliser.
-                    Nous pouvons toujours augmenter les performances du Raspberry Pi via à de l'\underline{Overclocking} mais il faudrait un système de refroidissement pour le Raspberry Pi.
+                    Nous pouvons toujours augmenter les performances du Raspberry Pi via à de l'\underline{$ Overclocking^{\ref{def:Overclocking}}$} mais il faudrait un système de refroidissement pour le Raspberry Pi.
                 \end{itemize}
             \end{center}
 
@@ -137,7 +137,7 @@ Dans un premier temps, il faudra installer le système Raspbian. Une fois l’in
             \vspace{0.2cm}
 
             \begin{flushleft}
-                Raspberry Pi Imager est le moyen rapide et facile d'installer Raspberry Pi OS sur une microSD.\\[0.2cm]
+                Raspberry Pi Imager est le moyen rapide et facile d'installer Raspberry Pi \underline{$OS^{\ref{def:OS}}$} sur une microSD.\\[0.2cm]
 
                 Il nous faut télécharger le fichier d'installation sur le site web Raspberry.com et de l'installer.\\[0.2cm]
 
@@ -218,7 +218,7 @@ Dans un premier temps, il faudra installer le système Raspbian. Une fois l’in
             \end{flushleft}
 
     \section{Choix des technologies}
-        Pour le choix du langage de programmation, je me suis basé sur les langages de programmation les plus classés pour le (Raspberry Pi) système d'exploitation Raspbian.
+        Pour le choix du langage de programmation, On s'est basé sur les langages de programmation les plus classés pour le (Raspberry Pi) système d'exploitation Raspbian.
         Lors de ma recherche 5 langages de programmation en sont sortis : 
 
         \vspace{0.2cm}
@@ -236,7 +236,7 @@ Dans un premier temps, il faudra installer le système Raspbian. Une fois l’in
 
             Ce qui est normal, car le Pi dans "Raspberry Pi" signifie "Python". Il a donc le mérite d'être le choix par défaut.
 
-            Afin de pouvoir me décider sur le langage de programmation, il me faut chercher la compatibilité des API pour la camera. 
+            Afin de pouvoir nous décider sur le langage de programmation, il me faut chercher la compatibilité des \underline{$API^{\ref{def:API}}$} pour la camera. 
 
             Il s'avère que l'API PiCamera est installer par défaut sur le système d'exploitation Raspbian.
 
@@ -273,7 +273,7 @@ Dans un premier temps, il faudra installer le système Raspbian. Une fois l’in
         \begin{flushleft}
             Maintenant que nos modules sont importés, nous allons créer une maquette du menu principal de l'application.
             Cette maquette nous permettra d'avoir un aperçu de l'application.
-            Et nous permettra de concevoir le GUI de l'application à l'aide de Tkinter.            
+            Et nous permettra de concevoir le \underline{$GUI^{\ref{def:GUI}}$} de l'application à l'aide de Tkinter.            
         \end{flushleft}
 
         \subsection{Création de l'interface graphique}
