--- a/rapport_stage.tex
+++ b/rapport_stage.tex
@@ -40,6 +40,13 @@
 \include{./src/tex/cover_page.tex}
 % Intro             ===============================
 
+% White Sheet        ===============================
+\newpage
+\thispagestyle{empty}
+\mbox{}
+\newpage
+% White Sheet        ===============================
+
 % Remerciments             ===============================
 \include{./src/tex/thanks.tex}
 % Remerciments             ===============================
