--- a/src/tex/chapter_2.tex
+++ b/src/tex/chapter_2.tex
@@ -57,7 +57,7 @@
     \subsection{Ressources fournies}
     Plusieurs ressources m'ont été fournies dans le cadre de mon stage.
     Dans un premier temps, j'ai reçu le matériel permettant l'acquisition vidéo qui sera abordé dans la section 4.2.
-    Une connexion filaire au réseau de l'Université des Antilles a été fournie pour me permettant d'installer des mise à jour de logiciels.
+    Une connexion filaire au réseau de l'Université des Antilles a été fournie pour me permettant d'installer des mises à jour de logiciels.
 
     \subsection{Contraintes particulière}
     Durant ce stage j'ai eu deux contraintes particulières :
