--- a/src/tex/chapter_3.tex
+++ b/src/tex/chapter_3.tex
@@ -23,16 +23,16 @@
     \subsection{Positionnement du travail dans le projet}
     
     \begin{flushleft}
-        Le tout étant fait de façon manuelle, les biologistes accrochaient une GoPro au dessus du bac et ensuite devaient la rettirer afin de pouvoir récupérer les données enregistrées. Ce dispositif était fonctionnel et leur permettait de réaliser des captures vidéo mais ils leur fallait placé le bac dans le champ de vision de la GoPro a chaque fois qu'ils voulaient faire une capture.\\[0.2cm]
+        Le tout étant fait de façon manuelle, les biologistes accrochaient une GoPro au-dessus du bac et ensuite devaient la retirer afin de pouvoir récupérer les données enregistrées. Ce dispositif était fonctionnel et leur permettait de réaliser des captures vidéo mais il leur fallait placer le bac dans le champ de vision de la GoPro a chaque fois qu'ils voulaient faire une capture.\\[0.2cm]
         
-        Il fallait aussi que la GoPro soit connecté à un ordinateur afin de pouvoir récupérer les données.\\[0.2cm]
+        Il fallait aussi que la GoPro soit connectée à un ordinateur afin de pouvoir récupérer les données.\\[0.2cm]
 
         Ajouter à cela le démarrage et l'arrêt de l'enregistrement de manière manuelle entrainant régulièrement le déplacement du bac (avec les mouvements). La disposition de la GoPro ne permettait de bien voir la prévisualisation de la capture vidéo.\\[0.2cm]
 
         Les biologistes ont donc décidé d'améliorer leur dispositif afin de pouvoir réaliser l'expérience de manière plus pratique.\\[0.2cm]
 
         % Transition provisoire ()
-        Ce qui nous peremets d'enchainer sur l'objectif qui en découlent, comment nous pourront améliorer le dispositif.
+        Ce qui nous permets d'enchainer sur l'objectif qui en découlent, comment nous pourront améliorer le dispositif.
 
     \end{flushleft}
 
@@ -47,9 +47,9 @@
         \\[0.2cm]
 
         Il sera donc question de permettre au biologiste de réaliser des captures vidéo de manière plus pratique.
-        A defaut d'avoir un dispositif non-fixe comme énoncé, nous réaliserons un dispositif qui sera fixe.\\[0.2cm]
+        A défaut d'avoir un dispositif non-fixe comme énoncé, nous réaliserons un dispositif qui sera fixe.\\[0.2cm]
 
-        Ce dispositif sera installé sur une potence au-dessus du bac et restera fixe en permanence permettant de limiter voir supprimer les divers déplacements.\\[0.2cm]                
+        Ce dispositif sera installé sur une potence au-dessus du bac et restera fixe en permanence permettant de limiter voire supprimer les divers déplacements.\\[0.2cm]                
         
         Une application conviviale sera développée afin de permettre au biologiste de réaliser des captures vidéo plus facilement.\\[0.2cm]
 
@@ -59,7 +59,7 @@
     
         Le but de cette application est de permettre aux biologistes de réaliser des captures vidéo enregistrées directement sur la carte SD de la Raspberry Pi.\\[0.2cm]
 
-        Il sera également possible de visualiser les capture vidéos enregistrées sur la carte SD du Raspberry Pi et si besoin de les récupérer à l'aide d'une clé USB ou un disque dur externe sans problème.\\[0.2cm]
+        Il sera également possible de visualiser les capture vidéo enregistrées sur la carte SD du Raspberry Pi et si besoin de les récupérer à l'aide d'une clé USB ou un disque dur externe sans problème.\\[0.2cm]
 
         % Transition provisoire ()
         Voyons maintenant comment faire.
